--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!--Borrowed following line of code from in-class activity 1, week 2-->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" media=screen href="/assets/stylesheet.css"/>
+        <link rel="stylesheet" media=screen href="assets/stylesheet.css"/>
     </head>
 
     <body>
