removed slashes at beginning of image file links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             </section>
         </div>
         <section class= "section" id="Applications">
-                <a class= "app-link" id="prework" href="https://danrcross.github.io/prework-study-guide/"><img alt="prework study guide site" src="/assets/images/pwstudy.png"/></a>
+                <a class= "app-link" id="prework" href="https://danrcross.github.io/prework-study-guide/"><img alt="prework study guide site" src="assets/images/pwstudy.png"/></a>
             <div id="pic-buddy">
-                <a class= "app-link" id="mini-p" href="https://danrcross.github.io/mini-project-1/"><img alt="mini-project 1 site" src="/assets/images/minip1.png"/></a>
-                <a class= "app-link" id="challenge1" href="https://danrcross.github.io/challenge-1-cross/"><img alt="challenge 1 site" src="/assets/images/challenge-1-cross-screenshot.png"/></a>
+                <a class= "app-link" id="mini-p" href="https://danrcross.github.io/mini-project-1/"><img alt="mini-project 1 site" src="assets/images/minip1.png"/></a>
+                <a class= "app-link" id="challenge1" href="https://danrcross.github.io/challenge-1-cross/"><img alt="challenge 1 site" src="assets/images/challenge-1-cross-screenshot.png"/></a>
             </div>
         </section>
         <section id="Contact">
