--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
     <head>
         <!--Borrowed following line of code from in-class activity 1, week 2-->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" media=screen href="assets/stylesheet.css"/>
+        <link rel="stylesheet" href="assets/reset.css"/>
+        <link rel="stylesheet" href="assets/stylesheet.css"/>
     </head>
 
     <body>
         <nav class="section">
+
             <ul>
-                <li><a href=#About>About Me</a></li>
-                <li><a href=#Applications>Applications </a></li>
-                <li><a href=#Contact>Contact Me</a></li>
+                <h1 class="header">Daniel Cross</h1>
+                <li><a class ="shrink" href=#About>About Me</a></li>
+                <li><a class ="shrink" href=#Applications>Applications </a></li>
+                <li><a class ="shrink" href=#Contact>Contact Me</a></li>
             </ul>
         </nav>
-        <div id="top">
-            <header id="header" >
-                <h1 class="header">Daniel Cross</h1>
-                <img alt="photo of Daniel Cross" class="header" src="assets/images/profile1.jpg" />
-
-            </header>
-            <section class="top" id="About">
+        <section id="top">            
+            <div class="top" id="About">
                 <h2>About Me</h2>
-                    <p>I am a novice web developer. I am currently enrolled in an online web development bootcamp through the University of North Carolina at Chapel Hill. I am motivated by the satisfaction that this work brings: both as an individual, and in the role I could play in a community. Creating something useful for others gives me joy. 
-                    <br/>
-                    <br/>                    
+                <p>I am a novice web developer. I am currently enrolled in an online web development bootcamp through the University of North Carolina at Chapel Hill. I am motivated by the satisfaction that this work brings: both as an individual, and in the role I could play in a community. Creating something useful for others gives me joy. 
+                <br/>
+                <br/>                    
                     In my experience so far, coding involves a great deal of logical problem-solving tasks. I have always loved these kinds of puzzles. I am confident that I will be able to work through any challenge that I might meet in my coding career. Already, it has been a pleasure to get some webpages up and running, regardless of their simplicity. 
-                    </p>
-
-            </section>
+                </p>
+            </div>
+            <div id="avatar">
+                <img alt="photo of Daniel Cross" class="header" src="assets/images/profile1.jpg" />
+            </div>
         </div>
         <section class= "section" id="Applications">
-                <a class= "app-link" id="prework" href="https://danrcross.github.io/prework-study-guide/"><img alt="prework study guide site" src="assets/images/pwstudy.png"/></a>
+            <h2>Applications</h2>
+            <a class= "app-link" id="prework" href="https://danrcross.github.io/prework-study-guide/"><img alt="prework study guide site" src="assets/images/pwstudy.png"/></a>
             <div id="pic-buddy">
                 <a class= "app-link" id="mini-p" href="https://danrcross.github.io/mini-project-1/"><img alt="mini-project 1 site" src="assets/images/minip1.png"/></a>
                 <a class= "app-link" id="challenge1" href="https://danrcross.github.io/challenge-1-cross/"><img alt="challenge 1 site" src="assets/images/challenge-1-cross-screenshot.png"/></a>
