made some more design tweaks in CSS

--- a/index.html
+++ b/index.html
@@ -29,13 +29,20 @@
             <div id="avatar">
                 <img alt="photo of Daniel Cross" class="header" src="assets/images/profile1.jpg" />
             </div>
-        </div>
+        </section>
         <section class= "section" id="Applications">
             <h2>Applications</h2>
-            <a class= "app-link" id="prework" href="https://danrcross.github.io/prework-study-guide/"><img alt="prework study guide site" src="assets/images/pwstudy.png"/></a>
-            <div id="pic-buddy">
-                <a class= "app-link" id="mini-p" href="https://danrcross.github.io/mini-project-1/"><img alt="mini-project 1 site" src="assets/images/minip1.png"/></a>
-                <a class= "app-link" id="challenge1" href="https://danrcross.github.io/challenge-1-cross/"><img alt="challenge 1 site" src="assets/images/challenge-1-cross-screenshot.png"/></a>
+            <div id="apps">
+                <div id="first">
+                    <p>This is my first project. A simple site, intended as a study guide for a student who needs to brush up on the fundamentals of HTML, CSS, Git, and JavaScript.</p>
+                    <a class= "app-link" id="prework" href="https://danrcross.github.io/prework-study-guide/"><img alt="prework study guide site" src="assets/images/pwstudy.png"/></a>
+                </div>
+                <div id="later">
+                    <p>This is my first project. A simple site, intended as a study guide for a student who needs to brush up on the fundamentals of HTML, CSS, Git, and JavaScript.</p>
+                    <a class= "app-link" id="mini-p" href="https://danrcross.github.io/mini-project-1/"><img alt="mini-project 1 site" src="assets/images/minip1.png"/></a>
+                    <p>This is my first project. A simple site, intended as a study guide for a student who needs to brush up on the fundamentals of HTML, CSS, Git, and JavaScript.</p>
+                    <a class= "app-link" id="challenge1" href="https://danrcross.github.io/challenge-1-cross/"><img alt="challenge 1 site" src="assets/images/challenge-1-cross-screenshot.png"/></a>
+                </div>
             </div>
         </section>
         <section id="Contact">
