--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
                     <a class= "app-link" id="prework" href="https://danrcross.github.io/prework-study-guide/"><img alt="prework study guide site" src="assets/images/pwstudy.png"/></a>
                 </div>
                 <div id="later">
-                    <p>This is my first project. A simple site, intended as a study guide for a student who needs to brush up on the fundamentals of HTML, CSS, Git, and JavaScript.</p>
+                    <p>This site was reverse-engineered by looking at a model image. It includes a fixed header and a simple contact info form.</p>
                     <a class= "app-link" id="mini-p" href="https://danrcross.github.io/mini-project-1/"><img alt="mini-project 1 site" src="assets/images/minip1.png"/></a>
-                    <p>This is my first project. A simple site, intended as a study guide for a student who needs to brush up on the fundamentals of HTML, CSS, Git, and JavaScript.</p>
+                    <p>This site was not created by me. The source code was given to me, and I cleaned up the HTML and CSS. Comments are given in the code.</p>
                     <a class= "app-link" id="challenge1" href="https://danrcross.github.io/challenge-1-cross/"><img alt="challenge 1 site" src="assets/images/challenge-1-cross-screenshot.png"/></a>
+                    <p>This is a cheat sheet with CSS code snippets. This site uses color gradient properties, transition properties, and the :hover pseudo-class. </p>
+                    <a class= "app-link" id="mini-p2" href="https://danrcross.github.io/css-cheat/"><img alt="mini-project 2 site" src="assets/images/minip2.png"/></a>
                 </div>
             </div>
         </section>
         <section id="Contact">
             <h4>Contact Me:</h4>
             <ul>
-                <li>Email: danrcross@gmail.com</li>
+                <li>danrcross@gmail.com</li>
             </ul>
         </section>
         <footer class="section">
